--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.1.1",
+    "@sendgrid/mail": "^7.4.2",
+    "axios": "^0.21.1",
     "next": "10.1.3",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-input-slider": "^6.0.0",
+    "react-player": "^2.9.0",
+    "sass": "^1.32.11"
   }
 }
