--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"    
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.1.1",
     "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.1",
     "next": "10.1.3",
+    "node-fetch": "^2.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
