--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "react-input-slider": "^6.0.1",
     "react-player": "^2.9.0",
     "sass": "^1.49.4"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.39",
+    "typescript": "^4.5.5"
   }
 }
